--- a/socialNetwork/Base.lproj/Main.storyboard
+++ b/socialNetwork/Base.lproj/Main.storyboard
@@ -254,7 +254,7 @@
                                 <rect key="frame" x="0.0" y="157" width="375" height="510"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="416" id="QI5-pN-jTO">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="416" id="QI5-pN-jTO" customClass="PostCellTableViewCell" customModule="socialNetwork" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="416"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QI5-pN-jTO" id="Y5J-J0-Vjt">
@@ -290,10 +290,16 @@
                                                                 </stackView>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="hB7-pU-PL5">
                                                                     <rect key="frame" x="0.0" y="69" width="343" height="187"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="187" id="sBU-xM-16p"/>
+                                                                    </constraints>
                                                                 </imageView>
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Vak-cT-KaG">
                                                                     <rect key="frame" x="0.0" y="265" width="343" height="82"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="82" id="jgU-mY-vHt"/>
+                                                                    </constraints>
                                                                     <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
                                                                     <color key="textColor" red="0.19532179829999999" green="0.491085887" blue="0.66036826370000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -320,6 +326,7 @@
                                                             <constraints>
                                                                 <constraint firstItem="hB7-pU-PL5" firstAttribute="top" secondItem="F5v-g6-4Jt" secondAttribute="bottom" constant="8" id="2AF-Zh-PyQ"/>
                                                                 <constraint firstAttribute="trailing" secondItem="F5v-g6-4Jt" secondAttribute="trailing" constant="8" id="CD9-SH-uBd"/>
+                                                                <constraint firstItem="Vak-cT-KaG" firstAttribute="top" secondItem="hB7-pU-PL5" secondAttribute="bottom" constant="9" id="EFJ-t4-Omw"/>
                                                                 <constraint firstItem="hB7-pU-PL5" firstAttribute="top" secondItem="F5v-g6-4Jt" secondAttribute="bottom" constant="8" id="FAa-IA-uSd"/>
                                                                 <constraint firstItem="F5v-g6-4Jt" firstAttribute="top" secondItem="AFH-hN-Wf9" secondAttribute="top" constant="8" id="Oeh-Zw-xBt"/>
                                                                 <constraint firstItem="1aa-GY-dar" firstAttribute="top" secondItem="Vak-cT-KaG" secondAttribute="bottom" constant="10" id="cuG-lq-hsu"/>
@@ -343,6 +350,14 @@
                                                 <constraint firstItem="trt-lR-xzV" firstAttribute="leading" secondItem="Y5J-J0-Vjt" secondAttribute="leading" constant="8" id="wyW-Nr-0XE"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="heartImage" destination="kkf-83-tTY" id="sWS-9g-CbP"/>
+                                            <outlet property="numLikes" destination="qzM-Nx-Lyy" id="kZi-qn-ImO"/>
+                                            <outlet property="postImg" destination="hB7-pU-PL5" id="Omj-sy-cqc"/>
+                                            <outlet property="profileDesc" destination="Vak-cT-KaG" id="vx4-fG-DEo"/>
+                                            <outlet property="profileID" destination="iZ7-E0-Hbi" id="UNr-ZE-mIN"/>
+                                            <outlet property="profileImg" destination="pR1-oc-fmY" id="KV5-Cf-avf"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -363,6 +378,7 @@
                         <viewLayoutGuide key="safeArea" id="xsR-ew-wFi"/>
                     </view>
                     <connections>
+                        <outlet property="tableView" destination="dfL-M6-Qo7" id="LHH-BD-p4Y"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignIn" id="rOT-jD-YVs"/>
                     </connections>
                 </viewController>
